# ai-stream

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint_and_coverage.yaml
ai_stream/: __init__.py  app.py  config.py  random_stream.py  stream.py  ui_as_tools.py  utils.py  welcome.py
ai_stream/components/: __init__.py  assistant.py  helpers.py  messages.py  misc.py  random_assistant.py  tools.py  widgets.py
ai_stream/configurations/: assistants.py  function_tools.py  prompts.py  tool_functions.py
ai_stream/db/: aws.py
ai_stream/utils/: __init__.py  app_state.py  function_tools.py  registries.py
config/: default.yaml
smart_stream/: __init__.py  app.py  config.py  ui_as_tools.py  utils.py
tests/utils/: test_utils.py
