[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["AI Colleagues"]
description = "OpenAI Assistants API made simple. Assemble your assistant through prompts, functions, and assistants configurations, then test it in AI Stream. Updating prompts and functions will automatically update the assistants using them."
documentation = "https://github.com/AI-Colleagues/ai-stream"
homepage = "https://github.com/AI-Colleagues/ai-stream"
license = "MIT"
name = "ai-stream"
readme = "README.md"
repository = "https://github.com/AI-Colleagues/ai-stream"
version = "0.1.0"

[tool.poetry.dependencies]
hydra-core = "1.3.2"
langchain = "0.2.3"
langchain-core = "0.2.5"
moto = {version = "5.0.15", extras = ["server"]}
mypy = "^1.11.2"
openai = "1.50.2"
pynamodb = "6.0.1"
python = "^3.12"
python-dotenv = "1.0.1"
ruff = "^0.6.8"
streamlit = "1.38.0"
streamlit_code_editor = "0.1.21"
watchdog = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
