[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["AI Colleagues"]
description = "OpenAI Assistants API made simple. Assemble your assistant through prompts, functions, and assistants configurations, then test it in AI Stream. Updating prompts and functions will automatically update the assistants using them."
documentation = "https://github.com/AI-Colleagues/ai-stream"
homepage = "https://github.com/AI-Colleagues/ai-stream"
license = "MIT"
name = "ai-stream"
readme = "README.md"
repository = "https://github.com/AI-Colleagues/ai-stream"
version = "0.1.0"

[tool.poetry.dependencies]
hydra-core = "1.3.2"
langchain = "0.2.3"
langchain-core = "0.2.5"
moto = {version = "5.0.15", extras = ["server"]}
mypy = "^1.11.2"
openai = "1.50.2"
pynamodb = "6.0.1"
python = "^3.12"
python-dotenv = "1.0.1"
ruff = "^0.6.8"
streamlit = "1.38.0"
streamlit_code_editor = "0.1.21"
watchdog = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[tool.ruff]
exclude = ["docs", "build"]
line-length = 99
# Allow unused variables when underscore-prefixed.
target-version = "py312"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
extend-select = [
  "D401",  # First line should be in imperative mood
  "D400",  # First line should end in a period.
  "D404",  # First word of the docstring should not be 'This'
  "TID252"  # No relative imports (not pep8 compliant)
]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "C90",  # mccabe complexity
  "I",  # isort
  "N",  # PEP8-naming
  "UP",  # pyupgrade (upgrade syntax to current syntax)
  "PLE",  # Pylint error https://github.com/charliermarsh/ruff#error-ple
  "PLR",  # Pylint refactor (e.g. too-many-arguments)
  "PLW"  # Pylint warning (useless-else-on-loop)
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["ai_stream"]
lines-after-imports = 2
no-lines-before = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
